# ai-payment-fraud-detection-system

./: .gitignore  README.md  docker-compose.yml
fraud-detection-service/: Dockerfile  pyproject.toml  requirements.txt  train_model.py
fraud-detection-service/app/: main.py
fraud-detection-service/app/agents/: device_agent.py  fraud_agent.py  geo_agent.py  investigation_agent.py  ml_agent.py  supervisor_agent.py  velocity_agent.py
fraud-detection-service/app/api/: fraud_api.py
fraud-detection-service/app/config/: redis_client.py
fraud-detection-service/app/kafka/: consumer.py  producer.py
fraud-detection-service/app/schemas/: fraud_response.py  payment_event.py
fraud-detection-service/app/services/: fraud_service.py  ml_fraud_service.py
fraud-detection-service/app/tools/: device_tool.py  geo_tool.py  velocity_tool.py
fraud-detection-service/training-data/: fraud_data.csv
payment-service/: pom.xml
payment-service/src/main/java/com/payment/: PaymentServiceApplication.java
payment-service/src/main/java/com/payment/config/: AppConfig.java
payment-service/src/main/java/com/payment/controller/: AuthController.java  PaymentController.java
payment-service/src/main/java/com/payment/dto/: ConfirmPaymentRequest.java  CreatePaymentRequest.java  FraudResultEvent.java  LoginRequest.java  LoginResponse.java  PaymentEvent.java  PaymentResponse.java  SignupResponse.java
payment-service/src/main/java/com/payment/entity/: Idempotency.java  Payment.java  User.java  WebhookEvent.java
payment-service/src/main/resources/: application.properties
(+17 files in other folders)
